--- a/.github/workflows/sync_leetcode.yml
+++ b/.github/workflows/sync_leetcode.yml
@@ -2,25 +2,25 @@ name: Sync LeetCode Solutions
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs every hour (you can adjust this)
+    - cron: '0 * * * *'  # Runs every hour (adjust this as needed)
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Updated to v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
+      - name: Set up Python
+        uses: actions/setup-python@v4  # Updated to v4
+        with:
+          python-version: '3.8'
 
-    - name: Install dependencies
-      run: |
-        pip install requests PyGithub
+      - name: Install dependencies
+        run: |
+          pip install requests PyGithub
 
-    - name: Run sync script
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the token from GitHub secrets
-      run: python sync_leetcode.py  # Make sure this matches your script name
+      - name: Run sync script
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the token from GitHub secrets
+        run: python sync_leetcode.py  # Ensure this path is correct
